--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -30,9 +30,8 @@
     <PackageReference Include="Marten" Version="7.31.3" />
     <PackageReference Include="Marten.CommandLine" Version="7.31.3" />
     <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.1.3" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis"
-      Version="1.10.0-beta.1" />
-    <PackageReference Include="Scalar.AspNetCore" Version="1.2.37" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.10.0-beta.1" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.36" />
     <PackageReference Include="Riok.Mapperly" Version="4.1.0">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
