--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -12,29 +12,30 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.2.2" />
-    <PackageReference Include="Aspire.StackExchange.Redis" Version="9.0.0" />
-    <PackageReference Include="FastEndpoints" Version="5.33.0" />
-    <PackageReference Include="FastEndpoints.Generator" Version="5.33.0">
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.1.0" />
+    <PackageReference Include="Aspire.StackExchange.Redis" Version="9.1.0" />
+    <PackageReference Include="FastEndpoints" Version="5.35.0" />
+    <PackageReference Include="FastEndpoints.Generator" Version="5.35.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="FastEndpoints.Swagger" Version="5.33.0" />
-    <PackageReference Include="Fody" Version="6.9.0">
+    <PackageReference Include="FastEndpoints.Swagger" Version="5.35.0" />
+    <PackageReference Include="Fody" Version="6.9.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
     <PackageReference Include="Ixnas.AltchaNet" Version="0.4.1" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
-    <PackageReference Include="Marten" Version="7.31.3" />
-    <PackageReference Include="Marten.CommandLine" Version="7.31.3" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
+    <PackageReference Include="Marten" Version="7.39.1" />
+    <PackageReference Include="Marten.CommandLine" Version="7.39.1" />
     <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.1.3" />
     <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.10.0-beta.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.36" />
-    <PackageReference Include="Riok.Mapperly" Version="4.1.0">
+    <PackageReference Include="Riok.Mapperly" Version="4.1.1">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
