--- a/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
+++ b/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
@@ -12,19 +12,20 @@
 
   <ItemGroup>
     <PackageReference Include="Fido2.AspNet" Version="3.0.1" />
-    <PackageReference Include="Marten" Version="7.31.3" />
-    <PackageReference Include="Marten.CommandLine" Version="7.31.3" />
-    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.2.2" />
-    <PackageReference Include="Fody" Version="6.9.0">
+    <PackageReference Include="Marten" Version="7.39.1" />
+    <PackageReference Include="Marten.CommandLine" Version="7.39.1" />
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.1.0" />
+    <PackageReference Include="Fody" Version="6.9.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
     <PackageReference Include="Sodium.Core" Version="1.3.5" />
-    <PackageReference Include="Riok.Mapperly" Version="3.5.1">
+    <PackageReference Include="Riok.Mapperly" Version="4.1.1">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
@@ -38,8 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\Infrastructure\snowcoreBlog.Backend.Infrastructure.csproj" />
     <ProjectReference Include="..\..\IAM.Core\snowcoreBlog.Backend.IAM.Core.csproj" />
   </ItemGroup>
