--- a/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
+++ b/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql" Version="9.2.1" />
-    <PackageReference Include="Fido2.AspNet" Version="3.0.1" />
+    <PackageReference Include="Fido2.AspNet" Version="4.0.0-beta.16" />
     <PackageReference Include="Marten" Version="7.40.3" />
     <PackageReference Include="Marten.CommandLine" Version="7.40.3" />
     <PackageReference Include="Fody" Version="6.9.2">
