--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Aspire.Npgsql" Version="9.2.1" />
     <PackageReference Include="Aspire.StackExchange.Redis" Version="9.2.1" />
     <PackageReference Include="FastEndpoints" Version="6.0.0" />
+    <PackageReference Include="FastEndpoints.Security" Version="6.0.0" />
     <PackageReference Include="FastEndpoints.Generator" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
