--- a/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
+++ b/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
@@ -27,6 +27,11 @@
 
   <ItemGroup>
     <None Update="**/FodyWeavers.*" Visible="false" />
+    <Content Remove="appsettings.*.json" />
+    <Content Include="appsettings.*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
