--- a/Shared/Services/Push/snowcoreBlog.Backend.Push.csproj
+++ b/Shared/Services/Push/snowcoreBlog.Backend.Push.csproj
@@ -10,19 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Npgsql" Version="9.2.1" />
     <PackageReference Include="Fody" Version="6.9.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
-    <PackageReference Include="ntfy" Version="0.5.0" />
     <PackageReference Include="Sodium.Core" Version="1.4.0" />
-    <!-- <PackageReference Include="Riok.Mapperly" Version="3.5.1">
+    <PackageReference Include="NtfyCator" Version="0.3.0" />
+    <PackageReference Include="Riok.Mapperly" Version="4.2.1">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference> -->
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
