--- a/BusinessServices/Articles/snowcoreBlog.Backend.Articles.csproj
+++ b/BusinessServices/Articles/snowcoreBlog.Backend.Articles.csproj
@@ -11,12 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="FastEndpoints" Version="6.1.0" />
+  <PackageReference Include="FastEndpoints.Swagger" Version="6.1.0" />
     <PackageReference Include="Fody" Version="6.9.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
     <PackageReference Include="Marten" Version="7.40.3" />
+  <PackageReference Include="Ixnas.AltchaNet" Version="1.1.0" />
+  <PackageReference Include="MinimalStepifiedSystem.SourceGen" Version="1.2.2.0" />
     <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.2.2.0" />
     <PackageReference Include="Riok.Mapperly" Version="4.2.1">
       <ExcludeAssets>runtime</ExcludeAssets>
@@ -36,6 +39,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\snowcoreBlog.Universal\PublicApi\snowcoreBlog.PublicApi.csproj" />
+    <ProjectReference Include="..\..\Shared\Infrastructure\snowcoreBlog.Backend.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
