--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -14,6 +14,9 @@
       "Claims": {
         "readerAccount": "true"
       },
+      "ClaimProviderServices": [
+        "ReturnClaimsIfUserAuthor"
+      ],
       "AccessTokenValidityDurationInMinutes": 30,
       "RefreshTokenValidityDurationInMinutes": 21600
     }
