--- a/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
+++ b/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Gateway.Middleware\snowcoreBlog.Backend.Gateway.Middleware.csproj" />
     <ProjectReference Include="..\..\Infrastructure\snowcoreBlog.Backend.Infrastructure.csproj" />
     <ProjectReference Include="..\..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\..\snowcoreBlog.Universal\PublicApi\snowcoreBlog.PublicApi.csproj" />
