--- a/BusinessServices/Articles/snowcoreBlog.Backend.Articles.csproj
+++ b/BusinessServices/Articles/snowcoreBlog.Backend.Articles.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql" Version="9.4.2" />
+    <PackageReference Include="Aspire.StackExchange.Redis" Version="9.4.2" />
     <PackageReference Include="FastEndpoints" Version="6.1.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="6.1.0" />
     <PackageReference Include="FastEndpoints.Generator" Version="6.1.0">
