--- a/Shared/Core/snowcoreBlog.Backend.Core.csproj
+++ b/Shared/Core/snowcoreBlog.Backend.Core.csproj
@@ -8,16 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="snowcoreBlog.ResourceLoading" Version="0.0.3" />
-    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="WTorricos.Results" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles
-      Include="Resources\RouteResources_*.json"
-      NamespaceName="snowcoreBlog.Frontend.Core.Resources"
-      ClassName="RouteResources"
-      NeutralCulture="en" />
+    <AdditionalFiles Include="Resources\RouteResources_*.json" NamespaceName="snowcoreBlog.Frontend.Core.Resources" ClassName="RouteResources" NeutralCulture="en" />
   </ItemGroup>
 
 </Project>
