--- a/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
+++ b/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fido2" Version="4.0.0-beta.16" />
-    <PackageReference Include="Marten" Version="7.40.3" />
-    <PackageReference Include="Marten.CommandLine" Version="7.40.3" />
+    <PackageReference Include="Fido2" Version="4.0.0" />
+    <PackageReference Include="Marten" Version="7.40.5" />
+    <PackageReference Include="Marten.CommandLine" Version="7.40.5" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Fody" Version="6.9.2">
+    <PackageReference Include="Fody" Version="6.9.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
