--- a/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
+++ b/Shared/Services/IAM/snowcoreBlog.Backend.IAM.csproj
@@ -12,17 +12,17 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql" Version="9.5.2" />
-    <PackageReference Include="Fido2.AspNet" Version="4.0.0-beta.16" />
-    <PackageReference Include="Marten" Version="7.40.3" />
-    <PackageReference Include="Marten.CommandLine" Version="7.40.3" />
-    <PackageReference Include="Fody" Version="6.9.2">
+    <PackageReference Include="Fido2.AspNet" Version="4.0.0" />
+    <PackageReference Include="Marten" Version="7.40.5" />
+    <PackageReference Include="Marten.CommandLine" Version="7.40.5" />
+    <PackageReference Include="Fody" Version="6.9.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
     <PackageReference Include="Sodium.Core" Version="1.4.0" />
-    <PackageReference Include="Riok.Mapperly" Version="4.2.1">
+    <PackageReference Include="Riok.Mapperly" Version="4.3.0">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
